# serial_driver

serial_driver_ws/install/: local_setup.sh  setup.sh
serial_driver_ws/install/serial_driver/lib/serial_driver/: serial_node
serial_driver_ws/install/serial_driver/share/serial_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
serial_driver_ws/install/serial_driver/share/serial_driver/config/: serial_config.yaml
serial_driver_ws/log/: latest_build
serial_driver_ws/src/serial_driver/: README.md  setup.py
serial_driver_ws/src/serial_driver/launch/: serial_launch.launch.py
